[package]
name = "gradio_client_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
description = "Async Rust client for Gradio apps"
readme = "README.md"
repository = "https://github.com/komaruworld/gradio-client-rs"
homepage = "https://github.com/komaruworld/gradio-client-rs"
documentation = "https://docs.rs/gradio_client_rs"
keywords = ["gradio", "huggingface", "client", "async"]
categories = ["api-bindings", "asynchronous"]
include = ["/src/**", "/Cargo.toml", "/README.md", "/LICENSE"]

[dependencies]
base64 = "0.22.1"
bytes = "1.11"
futures-util = "0.3.31"
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "stream", "rustls-tls", "cookies"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
